sort.basic.lessons.sort.basic.selection.AlgSelectionSort.scala.error
AlgSelectionSort:18: error: not found: value j
		if(indice!=j)
                           ^